feat: api.services
endpoints to get, post and delete services
